<resources>
    <string name="app_name">PeopleMaterial</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="strCreateTitle">CREAR PERSONAS</string>
    <string name="strBtnCreate">CREAR</string>
    <string name="strBtnClear">LIMPIAR</string>
    <string name="strName">Nombre</string>
    <string name="strId">Cédula</string>
    <string name="strLastName">Apellido</string>
    <string name="srtPersonDetail">DETALLE PERSONA</string>
    <string name="strPersonDetail">DETALLE PERSONA</string>
    <string name="strIdTitle">Cédula</string>
    <string name="strNamTitle">Nombre</string>
    <string name="strLastNameTitle">Apellido</string>
    <string name="strDeleteTitle">Eliminar Persona</string>
    <string name="strDeletePersonMessage">¿Desea eliminar esta persona?</string>
    <string name="strPositiveOption">Si</string>
    <string name="strNegativeOption">No</string>
</resources>